--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   dio: ^4.0.6
+  connectivity_plus: ^3.0.2
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
